--- a/src/app/heroes/heroes.component.html
+++ b/src/app/heroes/heroes.component.html
@@ -1,6 +1,7 @@
 <h2>My Heroes</h2>
 <ul class="heroes">
-<li *ngFor="let hero of heroes">
-    <span class="badge">{{hero.id}}</span> {{hero.name}}
+<li *ngFor="let selectedHero of heroes" (click)="onSelect(hero)">
+    <!-- <span class="badge">{{hero.id}}</span> {{hero.name}} -->
+
   </li>
 </ul>
